# Unplug

./: .cursorrules  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md
sdk/: README.md  pyproject.toml  unplug.example.toml
sdk/benchmarks/: builtin_samples.py  download.py  evaluate.py  loader.py  run.py
sdk/examples/: hosted_client.py
sdk/src/unplug/: __init__.py  client.py  exceptions.py  guard.py  guard_scan.py  models.py  scanner.py
sdk/src/unplug/api/: __init__.py  enums.py  messages.py  types.py
sdk/src/unplug/config/: __init__.py  cache.py  guard.py  limits.py  loader.py  messages.py  policy.py
sdk/src/unplug/core/: __init__.py  asyncio_compat.py  cache.py  config.py  config_loader.py  content.py  context.py  encodings.py  judge.py  limits.py  logging.py  models.py  normalize.py  policy.py  privacy.py  secrets.py  stats.py  taint.py  versions.py
sdk/src/unplug/guards/: __init__.py  base.py
sdk/src/unplug/guards/scrape/: __init__.py
sdk/src/unplug/guards/tool/: __init__.py
sdk/src/unplug/orchestrators/: __init__.py  base.py  scrape.py  tool_output.py
sdk/src/unplug/pipelines/: __init__.py  base.py  input.py  output.py  toolcall.py
sdk/src/unplug/providers/: __init__.py  scrape.py
sdk/src/unplug/providers/content/: __init__.py  env.py  firecrawl.py  protocol.py  server.py
sdk/src/unplug/safeguards/: __init__.py  base.py  registry.py
sdk/src/unplug/safeguards/injection/: __init__.py  patterns.py  scanner.py
sdk/src/unplug/scanners/: __init__.py  base.py  destructive.py  financial.py  harmful.py  injection.py  leakage.py  secrets.py
sdk/tests/: test_adversarial.py  test_cache.py  test_client.py  test_config_loader.py  test_content.py  test_context.py  test_encodings.py  test_error_handling.py  test_evaluation.py  test_false_positives.py  test_financial.py  test_finding_validation.py  test_guard_limits.py  test_guard_scan_output_server.py  test_guard_server_mode.py  test_guard_v2.py  test_guards_scrape.py  test_guards_tool.py  test_infrastructure.py  test_judge.py  test_limits.py  test_logging.py  test_normalize.py  test_pipelines.py  test_privacy.py  test_scan_policy.py  test_scanners.py  test_sdk_coverage.py  test_secrets.py  test_secrets_scanner.py  test_security_stress.py  test_taint.py  test_thread_safety.py
server/: pyproject.toml
server/src/unplug_server/: __init__.py  main.py
server/src/unplug_server/api/routes/: scan.py
server/src/unplug_server/core/: config.py
(+13 files in other folders)
