[project]
name = "unplug"
version = "0.3.0"
description = "Pull the plug on bad AI. Fast prompt injection detection and redaction for LLM apps, agents, and RAG pipelines."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "Chirag Gupta" }]
keywords = ["llm", "prompt-injection", "ai-safety", "guardrails", "security", "agents", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
ml = [
    "onnxruntime>=1.17",
    "transformers>=4.40",
    "numpy>=1.26",
]
scrape = [
    "firecrawl-py>=1.0",
    "python-dotenv>=1.2.2",
]
all = ["unplug[ml,scrape]"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/chiruu12/Unplug"
Repository = "https://github.com/chiruu12/Unplug"
Issues = "https://github.com/chiruu12/Unplug/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/unplug"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "datasets>=4.8.5",
    "pyarrow>=24.0.0",
]
