[project]
name = "unplug-server"
version = "0.1.0"
description = "Self-hosted API server for Unplug — LLM defense layer"
readme = "../README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "Chirag Gupta" }]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "unplug[ml]",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/unplug_server"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
